Testing website refresh

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div id="lead-content">
             <div style="display: flex; flex-direction: row; flex-wrap: wrap;">
                 <h1>Kevin Siegall</h1>
-                <p>(They/He)</p>
+                <h3>(They/He)</h3>
             </div>
             <h2>Software Engineer and Roboticist</h2>
             <h2>Worcester Polytechnic Institute, Class of 2025</h2>
@@ -188,13 +188,13 @@
         <h3 class="heading">Version Control</h3>
         <ul>
             <li>Git</li>
-            <li>Github Projects</li>
+            <li>Agile/Scrum</li>
             <li>Azure DevOps</li>
+            <li>Github Projects</li>
             <li>Jira</li>
         </ul>
         <h3 class="heading">Other</h3>
         <ul>
-            <li>Agile/Scrum</li>
             <li>Autodesk Inventor</li>
             <li>Figma Mockups</li>
             <li>OpenMV - Computer Vision</li>
