Removed most images - replaced one

--- a/index.html
+++ b/index.html
@@ -48,10 +48,8 @@
 
     <div id="lead" class = "homepage-top">
         <div id="lead-content">
-            <div style="display: flex; flex-direction: row; flex-wrap: wrap;">
-                <h1>Kevin Siegall</h1>
-                <h3>(They/He)</h3>
-            </div>
+            <h1>Kevin Siegall</h1>
+            <h3>They/He</h3>
             <h2>Software Engineer and Roboticist</h2>
             <h2>Worcester Polytechnic Institute, Class of 2025</h2>
             <a href="Resume_Baldini.pdf" class="btn-rounded-white">Download Resume</a>
@@ -112,17 +110,23 @@
         <div class="education-block">
             <h3>Worcester Polytechnic Institute</h3>
             <span class="education-date">August 2021 - May 2025</span>
-            <h4>Bachelor of Science in Computer Science and Robotics Engineer</h4>
+            <h4>Bachelor of Science: Computer Science, Robotics Engineer</h4>
             <!-- <h3>Positions on Campus</h3> -->
             <ul>
                 <li>
-                    Reasearch Assistant in Robotics Materials Lab
+                    WPI Cooking Club - President (2023-2024)
                 </li>
                 <li>
-                    <a href= "https://users.wpi.edu/~apo/MBU/index.html">Merit Badge University Organizer: APO Service Fraternity IO Chapter</a>
+                    WPI Bowling Club - Treasurer (2022-2023)
                 </li>
                 <li>
-                    Controls and Electronics Designer: AIAA Jet Engine Club
+                    WPI Vex U Team - Software Co-Lead (2021-2022)
+                </li>
+                <li>
+                    WPI International Game Developers Association
+                </li>
+                <li>
+                    WPI Hillel
                 </li>
             </ul>
         </div>
@@ -134,6 +138,9 @@
             <ul>
                 <li>
                     Captain and Head Programmer: FTC Team 8108 - Theoretically Impossible
+                </li>
+                <li>
+                    Eagle Scout: BSA Troop 106, Huntington NY
                 </li>
             </ul>
         </div>
