--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div id="lead-content">
             <div style="display: flex; flex-direction: row; flex-wrap: wrap;">
                 <h1>Kevin Siegall</h1>
-                <div style="font-size: medium; color: #c594f3; -ms-transform: translateY(-50%); transform: translateY(-50%);">
+                <div style="font-size: medium; color: #c594f3; vertical-align: middle;">
                     <h3>(They/He)</h3>
                 </div>
             </div>
