Added more projects

--- a/index.html
+++ b/index.html
@@ -146,6 +146,32 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
+                        <h3>Brigham and Woman's Hospital Application</h3>
+                        <ul>
+                            <li>
+                                Made a hospital kiosk application, allowing for pathfinding, submitting work orders, and customizing signage.
+                            </li>
+                            <li>
+                                Led a team of 11 in developing a full Java application for WPI’s CS 3733 Software Engineering Class
+                            </li>
+                            <li>
+                                Utilized Figma to create and iterated on Front-End UI Mockups before implementing in JavaFX
+                            </li>
+                            <li>
+                                Implemented Façade, Singleton, and other design patterns for clean integration with the backend SQL Database
+                            </li>
+                        </ul>
+                        <a href="project_page_rbe3001.html">View Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/rbe3001_cover-icon.jpg" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
                         <h3>RBE 3001: Robotic Arm Control and OpenCV</h3>
                         <p>
                             As part of the RBE 3001 class I worked with a team to program a robotic arm to work with a camera to detect and pick up objects. 
@@ -155,7 +181,23 @@
                     <!-- End .project-info -->
                 </div>
                 <!-- End .project -->
-               
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/rbe3001_cover-icon.jpg" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>WPI Vex U, Software Team</h3>
+                        <p>
+                            Developed a python application for Bezier spline creation and robot simulation
+                            Applied control algorithms such as Inverse Kinematics, PID, and TBH (Take Back Half) Control
+                            Designed a modular codebase for controlling the individual movements of our two different robots 
+                        </p>
+                        <a href="project_page_rbe3001.html">View Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
             </div>
         </div>
     </div>
