Updated style sheet

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div id="lead-content">
             <div style="display: flex; flex-direction: row; flex-wrap: wrap;">
                 <h1>Kevin Siegall</h1>
-                <div style="font-size: medium; color: #c594f3; vertical-align: middle;">
+                <div style="font-size: medium; color: #c594f3; vertical-align: bottom;">
                     <h3>(They/He)</h3>
                 </div>
             </div>
@@ -83,7 +83,7 @@
                         I also create games in my free time for Game Jams that are help on campus.
                         <br>
                         <br>
-                        I am currently looking for an internship for summer 2024. I am very interested in finding work that progresses my robotics experience at a high level,
+                        I am currently looking for an internship for summer 2024. I am very interested in finding work that progresses my robotics experience in a real environment.
                     </p>
                 </div>
             </div>
@@ -147,20 +147,15 @@
                     <!-- End .project-image -->
                     <div class="project-info">
                         <h3>Brigham and Woman's Hospital Application</h3>
-                        <ul>
-                            <li>
-                                Made a hospital kiosk application, allowing for pathfinding, submitting work orders, and customizing signage.
-                            </li>
-                            <li>
-                                Led a team of 11 in developing a full Java application for WPI’s CS 3733 Software Engineering Class
-                            </li>
-                            <li>
-                                Utilized Figma to create and iterated on Front-End UI Mockups before implementing in JavaFX
-                            </li>
-                            <li>
-                                Implemented Façade, Singleton, and other design patterns for clean integration with the backend SQL Database
-                            </li>
-                        </ul>
+                        <p>
+                            Made a hospital kiosk application, allowing for pathfinding, submitting work orders, and customizing signage.
+                            <br>
+                            Led a team of 11 in developing a full Java application for WPI’s CS 3733 Software Engineering Class
+                            <br>
+                            Utilized Figma to create and iterated on Front-End UI Mockups before implementing in JavaFX
+                            <br>
+                            Implemented Façade, Singleton, and other design patterns for clean integration with the backend SQL Database
+                        </p>
                         <a href="project_page_rbe3001.html">View Project</a>
                     </div>
                     <!-- End .project-info -->
@@ -190,7 +185,9 @@
                         <h3>WPI Vex U, Software Team</h3>
                         <p>
                             Developed a python application for Bezier spline creation and robot simulation
+                            <br>
                             Applied control algorithms such as Inverse Kinematics, PID, and TBH (Take Back Half) Control
+                            <br>
                             Designed a modular codebase for controlling the individual movements of our two different robots 
                         </p>
                         <a href="project_page_rbe3001.html">View Project</a>
