Soft eng sub-page almost done

--- a/index.html
+++ b/index.html
@@ -142,21 +142,15 @@
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/rbe3001-cover-icon.jpg" />
+                        <img src="images/soft-eng-icon.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
                         <h3>Brigham and Woman's Hospital Application</h3>
                         <p>
-                            Made a hospital kiosk application, allowing for pathfinding, submitting work orders, and customizing signage.
-                            <br>
-                            Led a team of 11 in developing a full Java application for WPI’s CS 3733 Software Engineering Class
-                            <br>
-                            Utilized Figma to create and iterated on Front-End UI Mockups before implementing in JavaFX
-                            <br>
-                            Implemented Façade, Singleton, and other design patterns for clean integration with the backend SQL Database
+                            I led a team of 11 in developing a full Java application for WPI's CS 3733 Software Engineering Class
                         </p>
-                        <a href="project_page_rbe3001.html">View Project</a>
+                        <a href="desc_soft_eng.html">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -171,26 +165,22 @@
                         <p>
                             As part of the RBE 3001 class I worked with a team to program a robotic arm to work with a camera to detect and pick up objects. 
                         </p>
-                        <a href="project_page_rbe3001.html">View Project</a>
+                        <a href="desc_rbe3001.html">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
                 <!-- End .project -->
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/rbe3001-cover-icon.jpg" />
+                        <img src="images/vex-u-icon.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
                         <h3>WPI Vex U, Software Team</h3>
                         <p>
-                            Developed a python application for Bezier spline creation and robot simulation
-                            <br>
-                            Applied control algorithms such as Inverse Kinematics, PID, and TBH (Take Back Half) Control
-                            <br>
-                            Designed a modular codebase for controlling the individual movements of our two different robots 
+                            I spent two years traveling and competing with the WPI Vex U Robotics Team, helping design our autonomous procedures.
                         </p>
-                        <a href="project_page_rbe3001.html">View Project</a>
+                        <a href="desc_vex_u.html">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
