Fixed file extensions

--- a/desc_soft_eng.html
+++ b/desc_soft_eng.html
@@ -70,7 +70,7 @@
                     </p>
                 </div>
                 <div class="col-md-4">
-                    <image src="images\soft-eng-team.jpg" />
+                    <image src="images\soft-eng-team.png" />
                    
                 </div>
 
@@ -87,7 +87,7 @@
                         </p>
                     </div>
                     <div class="col-md-4">
-                        <img src="images\soft-eng-jira.jpg" width="550">
+                        <img src="images\soft-eng-jira.png" width="550">
                     </div>
                     <div class="col-md-4">
                         <image src="images\soft-eng-figma.jpg" width="550" />
