--- a/desc_soft_eng.html
+++ b/desc_soft_eng.html
@@ -70,7 +70,7 @@
                     </p>
                 </div>
                 <div class="col-md-4">
-                    <image src="images\soft-eng-team.png" />
+                    <image src="images\soft-eng-team.png" width="550" />
                    
                 </div>
 
@@ -89,9 +89,9 @@
                     <div class="col-md-4">
                         <img src="images\soft-eng-jira.png" width="550">
                     </div>
-                    <div class="col-md-4">
+                    <!-- <div class="col-md-4">
                         <image src="images\soft-eng-figma.jpg" width="550" />
-                    </div>
+                    </div> -->
                 </div>
             </div>
             
@@ -130,7 +130,7 @@
                 </div>
                 <div class="col-md-4">
                     <video controls width="300">
-                        <source src="images\soft-eng-trailer.mp4" type="video/mp4" />
+                        <source src="images\soft-eng-trailer.mp4" type="video/mp4" width="550" />
                     </video>
                 </div>
             </div>
