Fixed page structure - soft eng

--- a/desc_soft_eng.html
+++ b/desc_soft_eng.html
@@ -68,15 +68,20 @@
     <div id="about">
         <div class="container">
             <div class="row">
-                <div class="col-md-4">
-                    <p>
-                       During D-term of Sophmore Year, I took WPI's CS 3733 Software Engineering class. The class has a notorious reputation as one of the hardest classes at the school, due to the large team size and its very short iteration cycles. 
-                       Through two prototypes and four iterations, each developed during week-long agile sprints, I was forced to learn how to manage a team of 11 developers as the team's Lead Software Engineer.
-                       Our resulting app used Java, with JavaFX for the UI/UX interactions, and SQL (including a AWS-hosted server) on the back end.
-                    </p>
-                </div>
-                <div class="col-md-4">
-                    <image src="images\soft-eng-team.png" width="550" />
+                <div class="row">
+                    <div class="col-md-2">
+                        <h2 class="heading">About</h2>
+                    </div>
+                    <div class="col-md-4">
+                        <p>
+                        During D-term of Sophmore Year, I took WPI's CS 3733 Software Engineering class. The class has a notorious reputation as one of the hardest classes at the school, due to the large team size and its very short iteration cycles. 
+                        Through two prototypes and four iterations, each developed during week-long agile sprints, I was forced to learn how to manage a team of 11 developers as the team's Lead Software Engineer.
+                        Our resulting app used Java, with JavaFX for the UI/UX interactions, and SQL (including a AWS-hosted server) on the back end.
+                        </p>
+                    </div>
+                    <div class="col-md-4">
+                        <image src="images\soft-eng-team.png" width="550" />
+                    </div>
                 </div>
             </div>
         </div>
@@ -85,7 +90,7 @@
 
     <div id="version-control">
         <div class="container">
-            <div class="row">\
+            <div class="row">
                 <div class="row">
                     <div class="col-md-2">
                         <h2 class="heading">Version Control</h2>
