We try this again :)

--- a/desc_soft_eng.html
+++ b/desc_soft_eng.html
@@ -99,6 +99,8 @@
                             To manage a team of 11 people, it was important we chose the right tools for the job. We used Github for software version control, used Jira for User Stories and a Kanban board, and used Figma for UI Mockups before they were created in our Java Application.
 
                             <br>
+                            <br>
+                            <br>
 
                             One of the most important takeaways from this class was the utility of Design Patterns. The most prevalent ones for this project were ORMs, DAOs, and the Facade patterns. 
                             These three together managed all interactions with the SQL Database. 
@@ -123,6 +125,8 @@
     <div id="takeaways">
         <div class="container">
             <div class="row">
+                <div>
+                </div>
                 <div class="row">
                     <div class="col-md-2">
                         <h2 class="heading">What I Learned</h2>
