--- a/desc_soft_eng.html
+++ b/desc_soft_eng.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>My Portfolio</title>
+    <title>K Siegall</title>
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	<link rel="icon" href="favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
@@ -51,7 +51,7 @@
         </div>
         <!-- End #lead-content -->
 
-        <!-- <div id="lead-overlay"></div> -->
+        <div id="lead-overlay"></div>
 
         <div id="lead-down">
             <span>
@@ -135,7 +135,8 @@
                     </div>
                     <div class="col-md-4">
                         <p>
-                            The class being so work intensive meant that there was a lot to learn. For sure the hardest part of the class was managing splitting all the work between the 11 of us, but once we got comfortable with the pacing of the Sprints, we stopped having to grind on the last day 
+                            The class being so work intensive meant that there was a lot to learn. For sure the hardest part of the class was managing splitting all the work between the 11 of us, but once we got comfortable with the pacing of the Sprints, we stopped having to grind on the last day before each submission. 
+
                         </p>
                     </div>
                     <div class="col-md-4">
