Fixed file added by mistake

--- a/desc_soft_eng.html
+++ b/desc_soft_eng.html
@@ -43,7 +43,7 @@
     </header>
     <!-- End header -->
 
-    <div id="lead" class = "SoftEng-top">
+    <div id="lead" class="SoftEng-top">
         <div id="lead-content">
             <h1>Brigham and Woman's Hospital Kiosk App<br> </h1>
             <a href="https://github.com/Kreeevin/Soft-Eng-Hospital-App" class="btn-rounded-blue">View Repository</a>
@@ -74,10 +74,17 @@
                         During D-term of Sophmore Year, I took WPI's CS 3733 Software Engineering class. The class has a notorious reputation as one of the hardest classes at the school, due to the large team size and its very short iteration cycles. 
                         Through two prototypes and four iterations, each developed during week-long agile sprints, I was forced to learn how to manage a team of 11 developers as the team's Lead Software Engineer.
                         Our resulting app used Java, with JavaFX for the UI/UX interactions, and SQL (including a AWS-hosted server) on the back end.
+                        <br>
+                        <br>
+                        The app we made was a program to be used at various kiosks around the hospital, to be used passively as signage, more actively for pathfinding around the hospital, or by staff to submit work orders or food delivery requests.
+                        To the right, you can see a trailer that we made for our app, which is used as a screensaver after a period of inactivity, which showcases some of the features that we implemented.
+
                         </p>
                     </div>
                     <div class="col-md-4">
-                        <image src="images\soft-eng-team.png" width="550" />
+                        <video controls width="300">
+                            <source src="images\soft-eng-trailer.mp4" type="video/mp4" width="550" />
+                        </video>
                     </div>
                 </div>
             </div>
@@ -140,9 +147,7 @@
                         </p>
                     </div>
                     <div class="col-md-4">
-                        <video controls width="300">
-                            <source src="images\soft-eng-trailer.mp4" type="video/mp4" width="550" />
-                        </video>
+                        <image src="images\soft-eng-team.png" width="550" />
                     </div>
                 </div>
             </div>
