--- a/desc_rbe3001.html
+++ b/desc_rbe3001.html
@@ -45,7 +45,7 @@
 
     <div id="lead" class = "RBE3001-top">
         <div id="lead-content">
-            <h1>RBE3001 Final Project<br> </h1>
+            <h1>Robotic Pick-And-Place Sorting System - RBE 3001<br> </h1>
             <a href="RBE_3001_Final_Report_Final.pdf" class="btn-rounded-blue">Download Report</a>
             <a href="index.html" class="btn-rounded-white">Return Home</a>
         </div>
