--- a/desc_vex_u.html
+++ b/desc_vex_u.html
@@ -45,7 +45,7 @@
 
     <div id="lead" class = "Engine-top">
         <div id="lead-content">
-            <h1>Nitinol Exploration</h1>
+            <h1>WPI Vex U</h1>
             <a href="index.html" class="btn-rounded-white">Return Home</a>
         </div>
         <!-- End #lead-content -->
@@ -65,7 +65,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-2">
-                    <h2 class="heading">Electrical Wiring and Design</h2>
+                    <h2 class="heading">This Page is a work in progress</h2>
                 </div>
                 <div>
 
@@ -83,45 +83,6 @@
                     </iframe>
                    
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-md-2">
-                    <h2 class="heading">Control System</h2>
-                </div>
-                <div>
-
-                </div>
-                <div class="col-md-4">
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat. Donec
-                        eu vehicula neque. Donec viverra lorem nunc, tempus euismod eros sollicitudin ut. Quisque et tincidunt libero. Donec id pharetra justo. Proin euismod lacinia dolor, eu scelerisque justo tempus pharetra. Vivamus nunc justo, finibus
-                        ut nisl sed, euismod rhoncus nulla. Proin sed magna egestas, egestas ante et, congue eros. In consequat, mauris dapibus tincidunt suscipit, ex libero aliquet diam, at maximus risus enim non leo.
-                    </p>
-                </div>
-                <div class="col-md-4">
-                    <img src="images\terminal-1.jpg" width="550">
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-3">
-                    <h2 class="heading">Data Collection</h2>
-                </div>
-                <div>
-
-                </div>
-                <div class="col-md-4">
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat. Donec
-                        eu vehicula neque. Donec viverra lorem nunc, tempus euismod eros sollicitudin ut. Quisque et tincidunt libero. Donec id pharetra justo. Proin euismod lacinia dolor, eu scelerisque justo tempus pharetra. Vivamus nunc justo, finibus
-                        ut nisl sed, euismod rhoncus nulla. Proin sed magna egestas, egestas ante et, congue eros. In consequat, mauris dapibus tincidunt suscipit, ex libero aliquet diam, at maximus risus enim non leo.
-                    </p>
-                </div>
-                <!-- <div class="col-md-4">
-                    <video controls width="300">
-                        <source src="images\Estop.mp4" type="video/mp4" />
-                    </video>
-                   
-                </div> -->
             </div>
         </div>
     </div>
