--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div style="display: flex; flex-direction: row; flex-wrap: wrap;">
                 <h1>Kevin Siegall</h1>
                 <div style="font-size: medium; color: #c594f3; vertical-align: bottom;">
-                    <h3>(They/He)</h3>
+                    <h3>(They/Them)</h3>
                 </div>
             </div>
             <h2>Software Engineer and Roboticist</h2>
