--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <div class="col-md-8">
                     <p>
                         Hey! I'm a Junior at WPI studying Computer Science and Robotics Engineering! I specialize in Robotics controls and navigation, but I also do work in app development and have been learning how to develop web apps. 
-                        I also create games in my free time for Game Jams that are help on campus.
+                        I also create games in my free time for Game Jams that are held on campus.
                         <br>
                         <br>
                         I am currently looking for an internship for summer 2024. I am very interested in finding work that progresses my robotics experience in a real environment.
