--- a/desc_rbe3001.html
+++ b/desc_rbe3001.html
@@ -66,7 +66,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-5">
-                    <h2 class="heading">Robot Control</h2>
+                    <h2 class="heading">THIS PAGE IS A WORK IN PROGRESS</h2>
                 </div>
             </div>
             <div class="row">
@@ -137,11 +137,11 @@
             <div class="row">
                 <div class="col-md-4">
                     <p>
-                        <a href="RBE_3001_Final_Report_Final.pdf" class="btn-rounded-blue">Download Final Report Here!</a>
+                        <!-- <a href="RBE_3001_Final_Report_Final.pdf" class="btn-rounded-blue">Download Final Report Here!</a> -->
                     </p>
                 </div>
                 <div class="col-md-4">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/fyROhRms9YE?si=QZBElS6wDQpVbH2y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/fyROhRms9YE?si=QZBElS6wDQpVbH2y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> -->
                 </div>
             </div>
         </div>
