--- a/desc_vex_u.html
+++ b/desc_vex_u.html
@@ -119,13 +119,13 @@
                 <div class="col-sm-5 social">
                     <ul>
                         <li>
-                            <a href="https://github.com/somguynamedseb" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+                            <a href="https://github.com/kreeevin" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
                         </li>
                         <!-- <li>
                             <a href="https://stackoverflow.com/" target="_blank"><i class="fa fa-stack-overflow" aria-hidden="true"></i></a>
                         </li> -->
                         <li>
-                            <a href="www.linkedin.com/in/sebastian-baldini" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                            <a href="www.linkedin.com/in/kevin-siegall" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                         </li>
                         <!-- <li>
                             <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
