Fixed image size

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                     <!-- RBE 470x -->
                     <div class="project shadow-large">
                         <div class="project-image">
-                            <img src="images/rbe470x-cover-icon.jpg" />
+                            <img src="images/rbe470x-cover-icon.jpg" width="300" height="300" />
                         </div>
                         <div class="project-info">
                             <h3>Bomberman AI</h3>
@@ -168,7 +168,7 @@
                     <!-- HUA -->
                     <div class="project shadow-large">
                         <div class="project-image">
-                            <img src="images/whirly-tunes-cover-icon.jpg" />
+                            <img src="images/whirly-tunes-cover-icon.jpg" width="300" height="300" />
                         </div>
                         <div class="project-info">
                             <h3>Whirly Tunes - A Musical Robot </h3>
@@ -181,7 +181,7 @@
                     <!-- Vex U -->
                     <div class="project shadow-large">
                         <div class="project-image">
-                            <img src="images/vex-u-icon.jpg" />
+                            <img src="images/vex-u-icon.jpg" width="300" height="300" />
                         </div>
                         <div class="project-info">
                             <h3>WPI Vex U, Software Team</h3>
@@ -196,7 +196,7 @@
                     <!-- RBE 3002 -->
                     <div class="project shadow-large">
                         <div class="project-image">
-                            <img src="images/rbe3001-cover-icon.jpg" />
+                            <img src="images/rbe3001-cover-icon.jpg" width="300" height="300" />
                         </div>
                         <div class="project-info">
                             <h3>Robotic Pick-And-Place System</h3>
@@ -209,7 +209,7 @@
                     <!-- RBE 3001 -->
                     <div class="project shadow-large">
                         <div class="project-image">
-                            <img src="images/rbe3002-cover-icon.jpg" />
+                            <img src="images/rbe3002-cover-icon.jpg" width="300" height="300" />
                         </div>
                         <div class="project-info">
                             <h3>Autonomous Mapping and Navigation</h3>
@@ -222,7 +222,7 @@
                     <!-- Soft Eng -->
                     <div class="project shadow-large">
                         <div class="project-image">
-                            <img src="images/soft-eng-icon.jpg" />
+                            <img src="images/soft-eng-icon.jpg" width="300" height="300" />
                         </div>
                         <div class="project-info">
                             <h3>Brigham and Woman's Hospital Application</h3>
